# muttlook

./: .gitignore  LICENSE  README.md  muttlook.py  pyproject.toml
.github/workflows/: ci.yml
src/muttlook/: __init__.py  mutt_trim.py
tests/: test_functional.py  test_muttlook.py
tests/fixtures/: bare_html_table.eml  border_data_table.eml  gmail_html.eml  nested_lists.eml  new_message.eml  newsletter_layout_tables.eml  obsidian_features.eml  original.eml  outlook_html.eml  reply_notmuch_missing.eml  reply_references_only.eml  reply_with_markdown.eml  trim_filters.eml
