[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muttlook"
version = "0.1.0"
description = "Tool for mutt to reply outlook html mail with markdown power"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "mail-parser>=3.9.3",
    "mail-parser-reply",
    "markdown>=3.1.1",
    "pymdown-extensions>=10.0",
    "rich>=13.0",
    "shortuuid",
]

[project.scripts]
muttlook = "muttlook:main"
mutt-trim = "muttlook.mutt_trim:main"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
ignore = [
  "E501" # line-length
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = ["B"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"
